# Math-COM-model

./: .gitignore  CMakeLists.txt  README.md
includes/: MathModel.hpp  RungeKutta.hpp  drawGraph.hpp  launchCalculations.hpp  linearInterpolation.hpp  mathFunc.hpp  matrix.hpp  parser.hpp
matrix_lib/: Matrix.cpp  Matrix.hpp  matrix.cpp
srcs/: drawGraph.cpp  launchCalculations.cpp  linearInterpolation.cpp  main.cpp  mathFunc.cpp
srcs/integrator/: MathModel.cpp  RungeKutta.cpp
srcs/parser/: parser.cpp  readInitValues.cpp
